src/test/resources/good/custom/007-constexpr-jumps.lat
int main () {
    int x = 1;
    int y = 2;
    int z = 3;

    if (x * y + z >= 2 * 3 || z - y == x) {
        return 0;
    } else {
        return 1;
    }
}
