src/test/resources/bad/provided/035-extends-non-existent-class.lat
class B extends A {
    int b;
}

int main () {
    return 0;
}
